# poc-zot

./: .env  Cargo.toml  readme.md
src/: controllers.rs  entities.rs  lib.rs  main.rs  post.essai.rs  services.rs
src/controllers/: delete_component.rs  get_component.rs  mod.rs  push_component.rs  update_component.rs
