[package]
name = "poc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"    # Framework web pour l'API
actix-multipart = "0.6"  # Gestion des fichiers multipart (upload)
base64 = "0.22.1" # Encodage et décodage en Base64
chrono = "0.4.40" # Gestion des dates et formats temporels 
futures = "0.3"      # Gestion des futures pour multipart
hex = "0.4"    # Pour convertir le hash en hexadécimal
reqwest = { version = "0.11", features = ["multipart", "json"] }  # Client HTTP pour envoyer à Zot
sha2 = "0.10"  # Pour calculer le SHA256
serde = { version = "1.0", features = ["derive"] }  # Pour sérialiser le manifest
serde_json = "1.0"  # Pour JSON
tokio = { version = "1", features = ["full"] }  # Runtime async

